# distilled-draft-decoding

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
configs/: config.yaml  prepare_data.yaml
configs/benchmark/: default.yaml
configs/data/: alpaca_50k.yaml  eval_holdout.yaml  ultrachat_10k.yaml  ultrachat_25k.yaml  ultrachat_50k.yaml  ultrachat_50k_target_gen.yaml
configs/eval/: default.yaml
configs/loss/: ce.yaml  fkl.yaml  jsd.yaml  rkl.yaml
configs/model/: qwen25.yaml
configs/runtime/: default.yaml  sweep.yaml
configs/train/: default.yaml
notebooks/: run_eval_pipeline.ipynb  siyuan_zhang_388143.ipynb  submit.sh  tianyi_zhu_386499.ipynb  zhiyan_ke_407061.ipynb
rcp_support/: Dockerfile  README.md  build.sh  eval_ep_loop.sh  submit.sh  submit_ep.sh  submit_train.sh  train_ep_pod.sh
scripts/: cache_target_logits.py  evaluate_sd.py  generate_target_responses.py  prepare_data.py  train.py
slurm/: train_losses.sbatch
src/kdsd/data/: __init__.py  dataset.py  download.py  logit_cache.py  process.py  target_generate.py
src/kdsd/eval/: metrics.py  runner.py
src/kdsd/eval/benchmarks/: base.py  registry.py
src/kdsd/losses/: __init__.py  ce.py  combined.py  fkl.py  jsd.py  rkl.py
src/kdsd/models/: loader.py
src/kdsd/sd/: instrument.py
src/kdsd/train/: __init__.py  trainer.py
src/kdsd/utils/: experiment.py  io.py  logging.py  timing.py
tests/: test_config_compose.py  test_data.py  test_eval_runner.py  test_eval_schema.py  test_eval_wandb.py  test_losses.py  test_train_data_autoprepare.py  test_trainer.py
